mise en place des commentaires

--- a/MineSweeper.html
+++ b/MineSweeper.html
@@ -29,16 +29,16 @@
     
                 <div class="menus">
                     <div class="menu" onclick="MineSweeper.startGame('easy');">
-                        Niveau "Facile"
+                        Niveau "Débutant"
                     </div>
                     <div class="menu" onclick="MineSweeper.startGame('normal');">
-                        Niveau "Normal"
+                        Niveau "Intermédiaire"
                     </div>
                     <div class="menu" onclick="MineSweeper.startGame('hard');">
-                        Niveau "Difficile"
+                        Niveau "Expert"
                     </div>
                     <div class="menu" onclick="MineSweeper.startGame('extreme');">
-                        Niveau "Extrême"
+                        Niveau "Maître"
                     </div>
                 </div>
             </div>
