--- a/MineSweeper.html
+++ b/MineSweeper.html
@@ -16,16 +16,17 @@
         <h1>
             Démineur de Julie la queen
         </h1>
-        <h1 id="chrono">00:00:00</h1>
-        <input type="button" id="start" value="start">
-        <input type="button" id="stop" value="stop">
-        <input type="button" id="reset" value="reset">
+        <div style="margin-bottom: 1rem;">
+            <h1 id="chrono">00:00:00</h1>
+            <input type="button" id="start" value="start">
+            <input type="button" id="stop" value="stop">
+            <input type="button" id="reset" value="reset">
+        </div>
         <script>
             let start=document.getElementById("start");
             let stop=document.getElementById("stop");
             let reset=document.getElementById("reset");
             let chrono=document.getElementById("chrono");
-            let p=document.getElementById("p");
 
             let mils=0;
             let secondes=0;
