--- a/MineSweeper.html
+++ b/MineSweeper.html
@@ -22,6 +22,10 @@
             <input type="button" id="stop" value="stop">
             <input type="button" id="reset" value="reset">
         </div>
+        <p>
+            Pour l'instant, le chrono doit être lancé et arrêté par l'utilisateur.
+            Il n'y a pas la partie bonus.
+        </p>
         <script>
             let start=document.getElementById("start");
             let stop=document.getElementById("stop");
