--- a/MineSweeper.html
+++ b/MineSweeper.html
@@ -51,7 +51,7 @@
                    mils="0"+mils;
                 }
 
-                chrono.textContent = `${(minutes + "").padStart(2, "0")}:${(secondes + "").padStart(2, "0")}.${(mils + "").padStart(2, "0")}`;
+                chrono.textContent = `${(minutes + "").padStart(2, "0")}:${(secondes + "").padStart(2, "0")}:${(mils + "").padStart(2, "0")}`;
             
             
             }
